apps/servarr/radarr/overlays/nishir-tailnet/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-redirect
spec:
  hostnames:
    - radarr.i.shikanime.studio
  parentRefs:
    - name: radarr
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
