apps/servarr/radarr/overlays/nishir-tailnet/patch-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
spec:
  hostnames:
    - radarr.i.shikanime.studio
  parentRefs:
    - name: radarr
      sectionName: https
